# RockZeroOS-Service

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.multiarch  LICENSE  README.md  SECURE_HLS_GUIDE.md  SECURITY_IMPLEMENTATION.md  WINDOWS_DEV_NOTE.md  build-cross-platform.sh  casaos-app.json  casaos-appstore-play.json  docker-compose.multiarch.yml  docker-compose.yml  istoreos-app.json  rockzero-automount.service  rockzero-safe-shutdown.service  rockzero-service.service  rockzero.db  setup_ffmpeg.sh
doc/: DISK_MANAGEMENT.md  QUICK_INSTALL.md  磁盘管理功能说明.md
rockzero-common/: Cargo.toml
rockzero-common/src/: config.rs  error.rs  lib.rs  models.rs  types.rs
rockzero-crypto/: Cargo.toml
rockzero-crypto/src/: aes.rs  bulletproofs_ffi.rs  crypto.rs  ed25519.rs  hash.rs  jwt.rs  lib.rs  signature.rs  tls.rs  utils.rs  zkp.rs
rockzero-db/: Cargo.toml
rockzero-db/src/: lib.rs  models.rs  operations.rs  secure_db.rs
rockzero-media/: Cargo.toml
rockzero-media/src/: bulletproof_auth.rs  chunk_manager.rs  encryptor.rs  error.rs  ffmpeg_manager.rs  lib.rs  playlist.rs  secure_transport.rs  session.rs  tcp_stream.rs  udp_stream.rs
rockzero-sae/: Cargo.toml
rockzero-sae/src/: client.rs  crypto.rs  error.rs  key_derivation.rs  lib.rs  protocol.rs  server.rs  tests.rs  types.rs
rockzero-service/: Cargo.toml
rockzero-service/src/: appstore.rs  crypto.rs  db.rs  docker_api.rs  event_notifier.rs  ffmpeg_manager.rs  fido.rs  file_transfer.rs  files.rs  hardware.rs  invite.rs  main.rs  media_processor.rs  middleware.rs  secure_db.rs  secure_storage.rs  secure_video_access.rs  storage_manager.rs  widgets.rs
rockzero-service/src/handlers/: appstore.rs  appstore_enhanced.rs  auth.rs  disk_manager.rs  docker.rs  filemanager.rs  files.rs  health.rs  media.rs  mod.rs  secure_hls.rs  secure_storage.rs  speedtest.rs  storage.rs  storage_management.rs  streaming.rs  system.rs  video_hardware.rs  wasm_store.rs  wasm_store.rs.bak  webdav.rs  widgets.rs  zkp_auth.rs
rockzero-zkp-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
rockzero-zkp-ffi/include/: rockzero_zkp.h
rockzero-zkp-ffi/src/: lib.rs
scripts/: auto-mount-disks.sh  deploy-armbian.sh  install-dependencies.sh  safe-shutdown.sh  setup.sh  test-api.sh
src/: auth.rs  config.rs  crypto.rs  db.rs  error.rs  ffmpeg_manager.rs  fido.rs  hardware.rs  invite.rs  main.rs  media_processor.rs  middleware.rs  models.rs  secure_db.rs  tls.rs  zkp.rs
src/handlers/: appstore.rs  auth.rs  disk_manager.rs  docker.rs  file_transfer.rs  filemanager.rs  files.rs  health.rs  media.rs  mod.rs  secure_storage.rs  speedtest.rs  storage.rs  streaming.rs  system.rs  webdav.rs  widgets.rs
src/streaming/: bulletproof_auth.rs  chunk_manager.rs  mod.rs  secure_transport.rs  tcp_stream.rs  udp_stream.rs
