[workspace]
resolver = "3"
members = [
    "rockzero-common",
    "rockzero-crypto",
    "rockzero-db",
    "rockzero-media",
    "rockzero-sae",
    "rockzero-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["blueokanna@gmail.com"]
license = "AGPL-3.0"
repository = "https://github.com/blueokanna/rockzero-service"

[workspace.dependencies]
# Actix web framework
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
libc = libc = "0.2.180"

# Cryptography
aes-gcm = "0.10"
base64 = "0.21"
blake3 = "1.5"
bulletproofs = "5.0.0"
curve25519-dalek = { version = "4.1", features = ["serde", "rand_core"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
getrandom = "0.2"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
merlin = "3.0"
rand = "0.8"
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
