[workspace]
resolver = "3"
members = [
    "rockzero-common",
    "rockzero-crypto",
    "rockzero-db",
    "rockzero-media",
    "rockzero-sae",
    "rockzero-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["blueokanna@gmail.com"]
license = "AGPL-3.0"
repository = "https://github.com/blueokanna/rockzero-service"

[workspace.dependencies]
# Actix web framework
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
aes-gcm = "0.10"
base64 = "0.21"
blake3 = "1.5"
bulletproofs = "5.0.0"
curve25519-dalek = { version = "4.1", features = ["serde", "rand_core"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
getrandom = "0.2"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
merlin = "3.0"
rand = "0.8"
sha3 = "0.10"
subtle = "2.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# JWT & Auth
jsonwebtoken = "9.2"
validator = { version = "0.16", features = ["derive"] }
webauthn-rs = "0.4"
webauthn-rs-proto = "0.4"

# TLS
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Media processing
symphonia = { version = "0.5", features = ["all"] }

# System
libc = "0.2.180"
sysinfo = "0.30"
nix = { version = "0.27", features = ["mount", "fs"] }
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"
image = "0.24"
mime_guess = "2.0"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "native-tls", "json", "gzip", "brotli", "deflate"] }
urlencoding = "2.1"
walkdir = "2.4"
wasmtime = { version = "18", features = ["async"] }
wasmtime-wasi = "18"
crc32fast = "1.3"
tempfile = "3.8"
tokio-test = "0.4"

# 配置构建输出目录到外部存储（HDD）
# 使用环境变量 CARGO_TARGET_DIR 或在 .cargo/config.toml 中配置

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
# 增量编译关闭以节省空间
incremental = false

[profile.dev]
opt-level = 0
debug = true
# 开发模式也关闭增量编译以节省空间
incremental = false
