[package]
name = "rockzero-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "RockZero Common Types and Utilities"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = { version = "9.2", optional = true }
sqlx = { version = "0.7", features = ["sqlite", "chrono"], optional = true }
actix-web = { workspace = true, optional = true }
actix-multipart = { workspace = true, optional = true }

[features]
default = []
db = ["sqlx"]
actix = ["actix-web", "actix-multipart", "jsonwebtoken"]
