[package]
name = "rockzero-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "RockZero Common Types and Utilities"
license.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
actix-multipart = { workspace = true, optional = true }

[features]
default = []
db = ["sqlx"]
actix = ["actix-web", "actix-multipart", "jsonwebtoken"]
