[package]
name = "rockzero-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "RockZero Cryptography Utilities"

[dependencies]
# Internal dependencies
rockzero-common = { path = "../rockzero-common" }
rockzero-sae = { path = "../rockzero-sae" }

# Cryptography (alphabetically sorted)
aes-gcm = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bulletproofs = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
merlin = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Serialization (alphabetically sorted)
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# TLS (alphabetically sorted)
rustls = "0.21"
rustls-pemfile = "1.0"

# Utilities
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
