[package]
name = "rockzero-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "RockZero Secure Database Management"
license.workspace = true

[dependencies]
# Internal dependencies
rockzero-common = { path = "../rockzero-common", features = ["db"] }
rockzero-crypto = { path = "../rockzero-crypto" }
rockzero-sae = { path = "../rockzero-sae" }

# Cryptography
aes-gcm = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
sha3 = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
tempfile = { workspace = true }
