[package]
name = "rockzero-media"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

# Serialization
bincode = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }

# Internal dependencies
rockzero-common = { path = "../rockzero-common" }
rockzero-sae = { path = "../rockzero-sae" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.8"
