[package]
name = "rockzero-media"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "RockZero Media Processing and Encryption"
license.workspace = true

[dependencies]
# Internal dependencies
rockzero-common = { path = "../rockzero-common" }
rockzero-sae = { path = "../rockzero-sae" }

# Async runtime
tokio = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
sha3 = { workspace = true }

# Serialization
bincode = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }

# System
libc = { workspace = true }

# Utilities
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
