[package]
name = "rockzero-sae"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Elliptic curve cryptography
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
group = "0.13"

# Internal dependencies
rockzero-common = { path = "../rockzero-common" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
