[package]
name = "rockzero-sae"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SAE (Simultaneous Authentication of Equals) implementation for secure device authentication"
license.workspace = true

[dependencies]
curve25519-dalek = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

[lib]
name = "rockzero_sae"
path = "src/lib.rs"
