[package]
name = "rockzero-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "RockZero Main Service - Cross-platform Secure Service with Hardware Detection and Media Support"

[[bin]]
name = "rockzero-service"
path = "src/main.rs"

[features]
default = []
fido = ["webauthn-rs", "webauthn-rs-proto"]

[dependencies]
# Internal workspace dependencies (alphabetically sorted)
rockzero-common = { path = "../rockzero-common", features = ["db", "actix"] }
rockzero-crypto = { path = "../rockzero-crypto" }
rockzero-db = { path = "../rockzero-db" }
rockzero-media = { path = "../rockzero-media" }
rockzero-sae = { path = "../rockzero-sae" }

# Actix web framework (alphabetically sorted)
actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }

# Cryptography (alphabetically sorted)
aes-gcm = { workspace = true }
base64 = { workspace = true }
bincode = "1.3"
blake3 = { workspace = true }
crc32fast = "1.3"
getrandom = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# Database (alphabetically sorted)
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }

# JWT
jsonwebtoken = "9.2"

# Logging (alphabetically sorted)
chrono = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Media processing
symphonia = { version = "0.5", features = ["all"] }

# Serialization (alphabetically sorted)
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# System info
sysinfo = "0.30"

# TLS
tokio-rustls = "0.24"

# Utilities (alphabetically sorted)
dotenvy = "0.15"
futures = { workspace = true }
futures-util = "0.3"
image = "0.24"
mime_guess = "2.0"
thiserror = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1"
uuid = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
walkdir = "2.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
wasmtime = { version = "18", features = ["async"] }
wasmtime-wasi = "18"

# FIDO2/WebAuthn (optional, alphabetically sorted)
webauthn-rs = { version = "0.4", optional = true }
webauthn-rs-proto = { version = "0.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["mount", "fs"] }

[dev-dependencies]
tokio-test = "0.4"
