[package]
name = "rockzero-zkp-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for RockZero Bulletproofs ZKP - Production Grade"
license = "MIT"

[lib]
name = "rockzero_zkp_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core ZKP implementation
rockzero-crypto = { path = "../rockzero-crypto" }

# Bulletproofs and curve operations
bulletproofs = "5.0"
curve25519-dalek = { version = "4.1", features = ["serde"] }
merlin = "3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Hashing
blake3 = "1.5"

# Random number generation
getrandom = "0.2"

# Lazy static for global state
lazy_static = "1.4"

# Error handling
thiserror = "1.0"

[build-dependencies]
cbindgen = "0.26"
